# intourist-telegram-bot

./: .gitignore  README.md  docker-compose-db.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/app/: celery.py  urls.py
backend/app/settings/: __init__.py  base.py  business_logic.py
backend/modules/payments/: admin.py  apps.py  consts.py  models.py
backend/modules/payments/migrations/: 0001_initial.py  0002_alter_payment_created_date_and_more.py
backend/modules/payments/rest/: serializers.py  urls.py  views.py
backend/modules/signups/: admin.py  apps.py  consts.py  models.py
backend/modules/signups/migrations/: 0001_initial.py  0002_alter_touristsignup_created_date_and_more.py  0003_alter_touristsignup_payment.py
backend/modules/signups/rest/: serializers.py  urls.py  views.py
backend/modules/tours/: admin.py  apps.py  consts.py  models.py  tasks.py  utils.py
backend/modules/tours/migrations/: 0001_initial.py  0002_alter_guide_created_date_alter_guide_modified_date_and_more.py  0003_alter_tourinstance_options_alter_tour_schedule_and_more.py  0004_alter_tour_locations_alter_tourinstance_guides.py
backend/modules/tours/rest/: serializers.py  urls.py  views.py
backend/modules/trello/: apps.py  client.py  models.py
backend/modules/trello/migrations/: 0001_initial.py
backend/modules/users/: admin.py  apps.py  managers.py  models.py  views.py
backend/modules/users/migrations/: 0001_initial.py  0002_user_created_date_user_modified_date.py  0003_alter_user_username.py  0004_alter_user_created_date_alter_user_modified_date.py
backend/modules/users/rest/: serializers.py  urls.py  views.py
backend/modules/utils/: apps.py  models.py
backend/modules/utils/openapi/: schema_generator.py
backend/utils/: bot.py  settings.py
backend/utils/trello/: client.py
backend/utils/utils/: keyboards.py
(+9 files in other folders)
