[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Alina Mukhomediarova <alinoco.dia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-telegram-bot = "13.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
